--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@google/generative-ai": "^0.2.0",
     "firebase-admin": "^12.0.0",
     "firebase": "^10.0.0",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
