--- a/package.json
+++ b/package.json
@@ -36,15 +36,15 @@
     "firebase-admin": "^12.0.0",
     "firebase": "^10.0.0",
     "zod": "^3.22.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.33",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.3.4",
-    "typescript": "^5.2.2"
+    "ts-jest": "^29.3.4"
   },
   "peerDependencies": {
     "react": "^18.0.0",
