--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "toto-ai",
+  "name": "toto-ai-hub",
   "version": "1.0.0",
-  "description": "Clean AI agent system for Toto platform using LangChain + Google Gemini",
+  "description": "AI agent system for Toto platform using Google Gemini",
   "main": "server.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "server.js",
-    "public"
-  ],
   "scripts": {
     "build": "tsc",
     "start": "node server.js",
     "dev": "tsc --watch",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "clean": "rimraf dist",
-    "prepublishOnly": "npm run clean && npm run build"
+    "clean": "rimraf dist"
   },
   "keywords": [
     "ai",
     "agents",
-    "langchain",
     "gemini",
     "toto",
     "chatbot"
@@ -45,9 +36,5 @@
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.3.4"
-  },
-  "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
   }
 }
