--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -34,6 +34,13 @@ env:
       - BUILD
       - RUNTIME
 
+  # Toto App Staging Service Account (entire JSON as secret)
+  - variable: TOTO_APP_STG_SERVICE_ACCOUNT_KEY
+    secret: toto-app-stg-service-account
+    availability:
+      - BUILD
+      - RUNTIME
+
 outputFiles:
   serverApp:
     include: [dist, package.json, package-lock.json, server.js, public, node_modules]
