--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc",
     "start": "node server.js",
-    "dev": "tsc --watch",
+    "dev": "concurrently \"tsc --watch\" \"nodemon server.js\"",
+    "dev:tsc": "tsc --watch",
+    "dev:server": "nodemon server.js",
     "test": "jest",
     "clean": "rimraf dist"
   },
@@ -24,16 +26,18 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "firebase-admin": "^12.0.0",
-    "firebase": "^10.0.0",
-    "zod": "^3.22.0",
     "express": "^4.18.2",
-    "typescript": "^5.2.2"
+    "firebase": "^10.0.0",
+    "firebase-admin": "^12.0.0",
+    "typescript": "^5.2.2",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.33",
+    "concurrently": "^9.2.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.3.4"
   }
