--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^10.0.0",
     "firebase-admin": "^12.0.0",
     "typescript": "^5.2.2",
+    "twitter-api-v2": "^1.15.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
