--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/cheerio": "^1.0.0",
+    "@types/node-cron": "^3.0.11",
+    "cheerio": "^1.1.2",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "firebase": "^10.0.0",
     "firebase-admin": "^12.0.0",
-    "typescript": "^5.2.2",
+    "node-cron": "^4.2.1",
+    "puppeteer": "^24.23.0",
     "twitter-api-v2": "^1.15.0",
+    "typescript": "^5.2.2",
     "zod": "^3.22.0"
   },
   "devDependencies": {
