--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@google/generative-ai": "^0.24.1",
     "@types/cheerio": "^1.0.0",
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^11.0.0",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
@@ -35,8 +36,10 @@
     "firebase-admin": "^12.0.0",
     "node-cron": "^4.2.1",
     "puppeteer": "^24.23.0",
+    "sharp": "^0.34.4",
     "twitter-api-v2": "^1.15.0",
     "typescript": "^5.2.2",
+    "uuid": "^13.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
