--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "firebase-admin": "^12.0.0",
     "node-cron": "^4.2.1",
     "puppeteer": "^24.23.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "sharp": "^0.34.4",
     "twitter-api-v2": "^1.15.0",
     "typescript": "^5.2.2",
@@ -45,6 +47,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.33",
+    "@types/node-fetch": "^2.6.13",
     "concurrently": "^9.2.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
