Implement shared KB architecture using toto-bo Firestore
- Update KnowledgeBaseService to accept shared Firestore instance
- Update TotoAPIGateway to use shared KB from toto-bo Firestore
- Configure server.js to initialize toto-bo Firebase Admin for shared KB
- Add TOTO_BO_SERVICE_ACCOUNT_KEY to apphosting.yaml for Secret Manager
- Update migration script to support shared KB location
- Add setup scripts and documentation for shared KB architecture
- Enhance error handling and logging for KB initialization

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -41,6 +41,15 @@ env:
       - BUILD
       - RUNTIME
 
+  # Toto BO Service Account (entire JSON as secret) - for shared KB access
+  # This allows toto-ai-hub to access the shared KB in toto-bo Firestore
+  # Both staging and production instances will use this to access the same KB
+  - variable: TOTO_BO_SERVICE_ACCOUNT_KEY
+    secret: toto-bo-service-account
+    availability:
+      - BUILD
+      - RUNTIME
+
 outputFiles:
   serverApp:
     include: [dist, package.json, package-lock.json, server.js, public, node_modules]
