--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:tsc": "tsc --watch",
     "dev:server": "nodemon server.js",
     "test": "jest",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "index-docs": "ts-node scripts/index-documentation.ts"
   },
   "keywords": [
     "ai",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@google-cloud/aiplatform": "^3.28.0",
+    "@google-cloud/discoveryengine": "^1.0.0",
     "@google/generative-ai": "^0.24.1",
     "@types/cheerio": "^1.0.0",
     "@types/node-cron": "^3.0.11",
@@ -54,6 +56,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.3.4"
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2"
   }
 }
