refactor: Simplify to KB-only approach for user-facing documentation
- Remove user-guides fallback (KB is sufficient)
- Add sync-kb-to-vertex script to sync KB from Firestore
- Update strategy: KB-only approach (no external docs needed)
- Update index-documentation.ts with deprecation warning
- Update VertexAISearchService category extraction

Why KB-only:
- KB is already user-facing and structured
- Single source of truth (Firestore)
- Easy to manage via toto-bo UI
- No need for fallback complexity

Architecture:
- Primary: RAGService searches KB (in-memory)
- Fallback: Vertex AI Search searches KB (unlimited)
- Both use KB - no external documentation

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:server": "nodemon server.js",
     "test": "jest",
     "clean": "rimraf dist",
-    "index-docs": "ts-node scripts/index-documentation.ts"
+    "index-docs": "ts-node scripts/index-documentation.ts",
+    "sync-kb-to-vertex": "ts-node scripts/sync-kb-to-vertex.ts"
   },
   "keywords": [
     "ai",
