feat: Add automatic KB sync to Vertex AI Search
- Sync KB automatically on server startup (non-blocking)
- Sync KB automatically when entries are added/updated/deleted
- Add syncKBToVertexAI() method to TotoAPIGateway
- Update API endpoints to trigger sync after KB changes
- Add comprehensive documentation (AUTOMATIC_KB_SYNC.md)
- Update WHEN_TO_SYNC_KB.md to reflect automatic sync

Benefits:
- No manual sync needed - happens automatically
- Always up-to-date - Vertex AI Search stays in sync
- Non-blocking - doesn't slow down API responses
- Error resilient - failures don't break the system

Manual sync script still available for troubleshooting.

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -11,6 +11,8 @@ runConfig:
 scripts:
   buildCommand: npm ci && npm run build
   runCommand: npm start
+  # Note: KB sync to Vertex AI Search happens automatically on server startup
+  # No need to add sync command here - it's built into the server initialization
 
 env:
   # Google AI API Key for Gemini
