--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -52,6 +52,36 @@ env:
       - BUILD
       - RUNTIME
 
+  # Instagram Basic Display API (for accessing guardian Instagram accounts)
+  # Access token and user ID for Instagram Basic Display API
+  # These are used when guardian-specific tokens are not available in Firestore
+  - variable: INSTAGRAM_ACCESS_TOKEN
+    secret: toto-ai-hub-instagram-access-token
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: INSTAGRAM_USER_ID
+    secret: toto-ai-hub-instagram-user-id
+    availability:
+      - BUILD
+      - RUNTIME
+
+  # Instagram Web Scraping Credentials (fallback method)
+  # Used for web scraping when Basic Display API is not available
+  # Note: These are less secure and may be rate-limited by Instagram
+  - variable: INSTAGRAM_USERNAME
+    secret: toto-ai-hub-instagram-username
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: INSTAGRAM_PASSWORD
+    secret: toto-ai-hub-instagram-password
+    availability:
+      - BUILD
+      - RUNTIME
+
 outputFiles:
   serverApp:
     include: [dist, package.json, package-lock.json, server.js, public, node_modules]
