feat: Integrate VectorDBService and add missing KB entries
CRITICAL FIXES:
- Integrated VectorDBService into RAGService (removes 1,000 chunk limit)
- RAGService now uses VectorDBService for unlimited, scalable storage
- All RAGService methods updated to work with VectorDBService
- Removed in-memory array storage limitation

NEW FEATURES:
- Created script to add 8 missing KB entries from conversation analysis
- Added npm script: npm run add-missing-kb-entries
- VectorDBService supports metadata filtering and batch operations

KB ENTRIES ADDED (8 entries):
High Priority (4):
- How to Verify Donations
- TRF (Toto Rescue Fund) - How to Donate
- Adoption Process - Step by Step Guide
- How to Share Cases on Social Media

Medium Priority (4):
- Totitos System - Complete Guide
- Handling Emotional Users - Empathy Guidelines
- Case Status Types - What They Mean
- Handling Incomplete Case Information

TECHNICAL CHANGES:
- RAGService constructor accepts vectorDBConfig
- getAllKnowledgeChunks() now async (queries VectorDBService)
- getMemoryStats() now async and returns unlimited storage info
- clearKnowledgeChunks() now async
- updateKnowledgeChunk() and deleteKnowledgeChunk() now async
- VectorDocument metadata allows custom fields (title, agentTypes, usageCount)
- Fixed migrate-to-vectordb.ts to await async methods

BREAKING CHANGES:
- RAGService methods are now async (getAllKnowledgeChunks, getMemoryStats, etc.)
- TotoAPIGateway.resetKnowledgeBase() updated to await clearKnowledgeChunks()

This addresses the critical gaps identified in KB_IMPLEMENTATION_GAP_ANALYSIS.md

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest",
     "clean": "rimraf dist",
     "index-docs": "ts-node scripts/index-documentation.ts",
-    "sync-kb-to-vertex": "ts-node scripts/sync-kb-to-vertex.ts"
+    "sync-kb-to-vertex": "ts-node scripts/sync-kb-to-vertex.ts",
+    "add-missing-kb-entries": "ts-node scripts/add-missing-kb-entries.ts"
   },
   "keywords": [
     "ai",
