Fix: Enable Vertex AI embeddings for intent detection in production
- Add VERTEX_AI_PROJECT_ID and VERTEX_AI_LOCATION to apphosting.yaml
- Fixes donation intent detection falling back to 'general' instead of 'donate'
- Production was using Gemini embeddings instead of Vertex AI text-embedding-004
- This caused different similarity scores and failed semantic intent detection
- Spanish messages weren't matching English keywords, defaulting to general intent
- Now production will use same Vertex AI embeddings as local, enabling proper intent detection and quick action buttons

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -31,6 +31,21 @@ env:
       - BUILD
       - RUNTIME
 
+  # Vertex AI Configuration (for multilingual embeddings)
+  # Required for semantic intent detection using text-embedding-004
+  # Without this, production falls back to Gemini embeddings which produce different similarity scores
+  - variable: VERTEX_AI_PROJECT_ID
+    value: toto-ai-hub
+    availability:
+      - BUILD
+      - RUNTIME
+
+  - variable: VERTEX_AI_LOCATION
+    value: us-central1
+    availability:
+      - BUILD
+      - RUNTIME
+
   # Environment
   - variable: NODE_ENV
     value: "production"
